tests/NormalTests/paczka1/fuzzy1/72025401.err
Error in line 5: lgbu6 A658 53,
Error in line 14: M4F A616 14,2
Error in line 19: McDjiuyAiy A658 7,6
Error in line 35: qfc A56 91,8
Error in line 32: McDjiuyAiy A540 3,0
Error in line 29: hhwnVrv2 A540 0,0
